--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
         <title>{{ page.title }}</title>
         <meta property="og:type" content="blog" />
         <meta property="og:title" content="Lookout Hackers Blog" />
-        <meta property="og:url" content="http://hackers.mylookout.com" />
+        <meta property="og:url" content="http://hackers.lookout.com" />
         <meta property="og:description" content="We're the engineers of Lookout Mobile Security, and now we have a blog. Join us!" />
         <meta property="og:site_name" content="Lookout Hackers Blog" />
         <meta property="og:image" content="http://0.gravatar.com/blavatar/a062f7763a305a4f10fe86a00058da34?s=300" />
@@ -67,8 +67,8 @@
                 <ul class='xoxo blogroll'>
                     <li><a href="http://feeds.feedburner.com/LookoutHackersBlog" title="Atom Feed">Atom Feed</a></li>
                     <li><a href="/oss.html" title="OSS @ Lookout">Open Source</a>
-                    <li><a href="https://www.mylookout.com/about/careers" title="Lookout Careers" target="_blank">Join Us</a></li>
-                    <li><a href="http://blog.mylookout.com" title="Main Lookout Blog" target="_blank">Lookout Official Blog</a></li>
+                    <li><a href="https://www.lookout.com/about/careers" title="Lookout Careers" target="_blank">Join Us</a></li>
+                    <li><a href="https://blog.lookout.com" title="Main Lookout Blog" target="_blank">Lookout Official Blog</a></li>
                 </ul>
             </li>
         </ul>
@@ -94,7 +94,7 @@
 
 
     <div id="site-info">
-    <a href="http://hackers.mylookout.com/" title="Lookout Hackers Blog" rel="home">
+    <a href="http://hackers.lookout.com/" title="Lookout Hackers Blog" rel="home">
     Lookout Hackers Blog                </a>
     </div><!-- #site-info -->
 
